--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,13 @@
   "name": "thunder-road/bar-and-grill",
   "description": "Thunder Road site helper deps",
   "require": {
-    "phpmailer/phpmailer": "^6.11"
+    "phpmailer/phpmailer": "^6.11",
+    "vlucas/phpdotenv": "^5.5"
+  }
+  ,
+  "autoload": {
+    "psr-4": {
+      "TRBG\\": "src/TRBG/"
+    }
   }
 }
